--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,65 +1,7 @@
 ---
-import Container from '~/components/shared/Container.astro'
-import Icon from '~/components/ui/Icon.astro'
 import Layout from '~/layouts/Layout.astro'
-
-const features = [
-  'Powered by Astro, a fast and modern framework',
-  'Built with TypeScript for type safety and scalability',
-  'Tailwind CSS v4 for a utility-first styling approach',
-  'Smooth page transitions for a better user experience',
-  'SEO-friendly with best practices for search visibility',
-  'Content Security Policy (CSP) headers configured',
-  'Highly customizable to fit your needs',
-  'Sitemap included for automatic indexing',
-  'Optimized SVG icons for better performance',
-  'Prettier for consistent code formatting',
-  'Biome for linting and code quality',
-  'Lefthook for managing Git hooks efficiently',
-  'Production-ready with optimized performance and deployment',
-]
 ---
 
 <Layout>
-  <div class="flex h-screen flex-col">
-    <div class="flex flex-1 flex-col px-4 pt-16 sm:pt-24">
-      <Container>
-        <h1 class="mb-10 text-2xl font-medium">Quick Web</h1>
-        <div class="space-y-6">
-          <p>A minimal, fast-loading template for building simple websites.</p>
-          <ul class="space-y-3">
-            {
-              features.map(feat => (
-                <li class="flex items-center">
-                  <Icon name="check" class="size-5 text-indigo-300" />
-                  <p class="ml-3">{feat}</p>
-                </li>
-              ))
-            }
-          </ul>
-        </div>
-        <hr class="my-6 w-full border-(--pattern-fg)" />
-        <p class="mb-3">Start building your next project with ease!</p>
-        <p class="font-medium">
-          <a
-            href="https://github.com/tinogasta-labs/quick-web"
-            target="_blank"
-            rel="noreferrer noopener"
-            class="underline decoration-indigo-400 underline-offset-3 hover:text-white hover:decoration-2"
-            >Get started &rarr;</a
-          >
-        </p>
-      </Container>
-    </div>
-    <footer class="px-4 py-8">
-      <Container
-        >by <a
-          href="https://github.com/tinogasta-labs"
-          class="underline hover:text-white hover:decoration-2"
-          target="_blank"
-          rel="noreferrer noopener">Tinogasta Labs</a
-        >.</Container
-      >
-    </footer>
-  </div>
+  <h1>www.tinogasta-labs</h1>
 </Layout>
