--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,10 +4,12 @@ import BaseLayout from '~/layouts/Layout.astro'
 ---
 
 <BaseLayout>
-  <div class="flex flex-col px-4 pt-16 md:pt-24">
+  <div class="flex flex-col pt-16 md:pt-24">
     <Container>
-      <h1 class="mb-10 text-2xl font-medium">Not found page</h1>
-      <p>The page you're looking for doesn&apos;t exist or has been moved.</p>
+      <h1 class="mb-10 text-2xl font-light">Not found page</h1>
+      <p class="font-light">
+        The page you're looking for doesn&apos;t exist or has been moved.
+      </p>
       <div class="py-10">
         <a href="/" class="inline-flex items-center gap-2">
           <svg
