--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '~/layouts/Layout.astro'
+import HeroSection from '~/sections/HeroSection.astro'
 ---
 
 <Layout>
-  <h1>www.tinogasta-labs</h1>
+  <HeroSection />
 </Layout>
