--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,26 +23,27 @@ const { title, description, keywords, image } = Astro.props
       keywords={keywords}
       image={image}
     />
-    <meta name="color-scheme" content="dark" />
   </head>
-  <body
-    class="flex min-h-screen flex-col bg-neutral-950 text-neutral-300 antialiased"
-  >
-    <header class="px-6">
-      <Container>
-        <div class="flex h-20 items-center justify-between">
-          <a href="/">Tinogasta Labs</a>
-          <button class="md:hidden">
-            <Icon name="menu" class="size-5" />
-          </button>
-        </div>
-      </Container>
-    </header>
-    <main class="flex-1 px-6">
-      <slot />
-    </main>
-    <footer class="flex h-24 items-center px-6">
-      <p class="w-full text-center">This site is under construction.</p>
-    </footer>
+  <body>
+    <div class="flex min-h-screen flex-col">
+      <header class="px-6">
+        <Container>
+          <div class="flex h-20 items-center justify-between">
+            <a href="/">Tinogasta Labs</a>
+            <button class="md:hidden">
+              <Icon name="menu" class="size-5" />
+            </button>
+          </div>
+        </Container>
+      </header>
+      <main class="flex-1 px-6">
+        <slot />
+      </main>
+      <footer class="flex h-24 items-center px-6">
+        <p class="text-fg-muted w-full text-center">
+          This site is under construction.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
