--- a/src/sections/HeroSection.astro
+++ b/src/sections/HeroSection.astro
@@ -7,16 +7,16 @@ import Container from '~/components/shared/Container.astro'
     <h1 class="text-4xl font-light sm:text-7xl">
       We develop <span class="block">open source tools</span> that your clients loves.
     </h1>
-    <p class="mt-4 font-light md:text-2xl">
+    <p class="text-fg-muted mt-4 font-light md:text-2xl">
       Building secure, high-performance applications for the community.
     </p>
     <div class="mt-6 flex items-center gap-4">
       <button
-        class="h-12 cursor-pointer rounded-full border border-white bg-white px-6 text-sm text-black"
+        class="border-primary bg-primary text-on-primary h-12 cursor-pointer rounded-full border px-6 text-sm"
         >Get in touch</button
       >
       <button
-        class="h-12 cursor-pointer rounded-full border border-white px-6 text-sm"
+        class="border-fg h-12 cursor-pointer rounded-full border px-6 text-sm"
       >
         Contribute</button
       >
