add landing sections#

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title, description, keywords, image } = Astro.props
       <header class="px-6">
         <Container>
           <div class="flex h-20 items-center justify-between">
-            <a href="/">Tinogasta Labs</a>
+            <a href="/" class="text-lg">Tinogasta Labs</a>
             <button class="md:hidden">
               <Icon name="menu" class="size-5" />
             </button>
