--- a/src/sections/HeroSection.astro
+++ b/src/sections/HeroSection.astro
@@ -2,7 +2,7 @@
 import Container from '~/components/shared/Container.astro'
 ---
 
-<section class="mt-16">
+<section class="py-16 md:pt-24">
   <Container>
     <h1 class="text-4xl font-light sm:text-7xl">
       We develop <span class="block">open source tools</span> that your clients loves.
