--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
 import Layout from '~/layouts/Layout.astro'
+import ContactSection from '~/sections/ContactSection.astro'
+import FaqSection from '~/sections/FaqSection.astro'
 import HeroSection from '~/sections/HeroSection.astro'
+import ServicesSection from '~/sections/ServicesSection.astro'
 ---
 
 <Layout>
   <HeroSection />
+  <ServicesSection />
+  <FaqSection />
+  <ContactSection />
 </Layout>
