add site navigation

--- a/src/components/ui/Icon.astro
+++ b/src/components/ui/Icon.astro
@@ -5,12 +5,13 @@ interface Props {
   name: IconName
   class?: string
   title?: string
+  id?: string
 }
 
-const { name, class: className, title = name } = Astro.props
+const { name, class: className, id, title = name } = Astro.props
 ---
 
-<svg class={className}>
+<svg class={className} id={id}>
   <title>{title}</title>
   <use href={`./icons/sprite.svg#${name}`}></use>
 </svg>
