--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -3,7 +3,7 @@ import Container from '~/components/shared/Container.astro'
 import Icon from '~/components/ui/Icon.astro'
 ---
 
-<section class="py-16 md:py-24">
+<section class="py-16 md:py-24" id="contact">
   <Container>
     <header class="mb-16 flex flex-col gap-2">
       <h1 class="text-2xl sm:text-4xl">Get in touch</h1>
