--- a/src/sections/FaqSection.astro
+++ b/src/sections/FaqSection.astro
@@ -26,7 +26,7 @@ const faqs = [
 ]
 ---
 
-<section class="py-16 md:py-24">
+<section class="py-16 md:py-24" id="faq">
   <Container>
     <header class="mb-16 flex flex-col gap-2">
       <h1 class="text-2xl sm:text-4xl">Frequently Asked Questions</h1>
