--- a/src/sections/ServicesSection.astro
+++ b/src/sections/ServicesSection.astro
@@ -25,7 +25,7 @@ const services = [
 ]
 ---
 
-<section class="py-16 md:py-24">
+<section class="py-16 md:py-24" id="services">
   <Container>
     <header class="mb-16 flex flex-col gap-2">
       <h1 class="text-2xl sm:text-4xl">What We Do?</h1>
