fix: mobile menu

--- a/src/components/shared/Header.astro
+++ b/src/components/shared/Header.astro
@@ -43,8 +43,9 @@ const navItems = [
             class="z-50 inline-flex items-center justify-center rounded-md p-2"
             aria-controls="mobile-menu"
             aria-expanded="false"
+            aria-labelledby="mobile-button-label"
           >
-            <span class="sr-only">Open main menu</span>
+            <span class="sr-only" id="mobile-button-label">Open main menu</span>
             <!-- Icon when menu is closed -->
             <Icon name="menu" class="size-5" id="menu-closed-icon" />
             <!-- Icon when menu is open -->
@@ -57,7 +58,8 @@ const navItems = [
     <!-- Mobile menu, show/hide based on menu state -->
     <div
       id="mobile-menu"
-      class="bg-opacity-95 bg-canvas fixed inset-0 z-40 flex flex-col items-center justify-center opacity-0 transition-opacity duration-300 ease-in-out md:hidden"
+      class="bg-canvas fixed inset-0 z-40 flex flex-col items-center justify-center transition-opacity duration-150 ease-in-out md:hidden"
+      inert
     >
       <div class="flex w-full flex-col items-center space-y-8 px-4">
         {
@@ -76,80 +78,56 @@ const navItems = [
 </header>
 
 <script>
-  const mobileMenuButton = document.getElementById('mobile-menu-button')
-  const mobileMenu = document.getElementById('mobile-menu')
-  const menuClosedIcon = document.getElementById('menu-closed-icon')
-  const menuOpenIcon = document.getElementById('menu-open-icon')
-  const body = document.body
+  function toggleMenu(
+    mobileMenu?: HTMLElement | null,
+    mobileButton?: HTMLElement | null,
+  ) {
+    const expanded = mobileButton?.getAttribute('aria-expanded') === 'true'
+    mobileMenu?.classList.toggle('open')
+    document.body.classList.toggle('overflow-hidden')
+    mobileButton?.setAttribute('aria-expanded', expanded ? 'false' : 'true')
+    const menuClosedIcon = document.getElementById('menu-closed-icon')
+    const menuOpenIcon = document.getElementById('menu-open-icon')
 
-  // Function to close mobile menu
-  function closeMobileMenu() {
-    if (mobileMenuButton && mobileMenu && menuClosedIcon && menuOpenIcon) {
-      // Reset menu state
-      mobileMenuButton.setAttribute('aria-expanded', 'false')
+    menuClosedIcon?.classList.toggle('hidden')
+    menuOpenIcon?.classList.toggle('hidden')
 
-      // Hide menu with fade out
-      mobileMenu.classList.remove('opacity-100')
-      mobileMenu.classList.add('opacity-0')
-
-      // Wait for animation to complete before hiding
-      setTimeout(() => {
-        mobileMenu.style.pointerEvents = 'none'
-        // Re-enable body scrolling
-        body.style.overflow = ''
-      }, 300)
-
-      // Toggle icons
-      menuClosedIcon.classList.toggle('hidden')
-      menuOpenIcon.classList.toggle('hidden')
+    if (expanded) {
+      mobileMenu?.setAttribute('inert', '')
+    } else {
+      mobileMenu?.removeAttribute('inert')
     }
   }
 
-  if (mobileMenuButton && mobileMenu && menuClosedIcon && menuOpenIcon) {
-    mobileMenuButton.addEventListener('click', () => {
-      const expanded = mobileMenuButton.getAttribute('aria-expanded') === 'true'
+  document.addEventListener('astro:page-load', () => {
+    const mobileMenuButton = document.getElementById('mobile-menu-button')
+    const mobileMenu = document.getElementById('mobile-menu')
+    const mobileMenuLinks = document.querySelectorAll('.mobile-menu-link')
 
-      mobileMenuButton.setAttribute('aria-expanded', (!expanded).toString())
-
-      // Toggle menu visibility
-      if (!expanded) {
-        // Enable interaction
-        mobileMenu.style.pointerEvents = 'auto'
-        // Prevent body scrolling
-        body.style.overflow = 'hidden'
-
-        // Trigger fade in (wait a tiny bit for the display change to take effect)
-        setTimeout(() => {
-          mobileMenu.classList.remove('opacity-0')
-          mobileMenu.classList.add('opacity-100')
-        }, 10)
-        menuClosedIcon.classList.add('hidden')
-        menuOpenIcon.classList.remove('hidden')
-      } else {
-        closeMobileMenu()
-      }
+    mobileMenuButton?.addEventListener('click', () => {
+      toggleMenu(mobileMenu, mobileMenuButton)
     })
 
-    // Add click event listeners to mobile menu links
-    const mobileMenuLinks = document.querySelectorAll('.mobile-menu-link')
     mobileMenuLinks.forEach(link => {
       link.addEventListener('click', () => {
-        // Optional: Prevent default navigation if using hash links to scroll
-        // e.preventDefault();
-
-        // Close mobile menu
-        closeMobileMenu()
+        toggleMenu(mobileMenu, mobileMenuButton)
       })
     })
-  }
+
+    if (mobileMenu?.classList.contains('open')) {
+      toggleMenu(mobileMenu, mobileMenuButton)
+    }
+  })
 </script>
 
 <style>
   #mobile-menu {
     pointer-events: none;
+    opacity: 0;
   }
 
-  #mobile-menu.opacity-100 {
+  #mobile-menu.open {
+    opacity: 1;
     pointer-events: auto;
   }
 </style>
