footer & social links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
+import Container from '~/components/shared/Container.astro'
 import Icon from '~/components/ui/Icon.astro'
-import Container from './Container.astro'
 
 // Define your navigation items
 const navItems = [
