--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -1,6 +1,7 @@
 ---
 import Container from '~/components/shared/Container.astro'
 import Icon from '~/components/ui/Icon.astro'
+import config from '~/site-config.json'
 ---
 
 <section class="py-16 md:py-24" id="contact">
@@ -16,7 +17,7 @@ import Icon from '~/components/ui/Icon.astro'
     <div class="grid gap-6 md:grid-cols-2">
       <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
         <a
-          href="mailto:contact@tinogasta-labs.com"
+          href={`mailto:${config.social.email}`}
           class="flex items-center gap-4 p-6"
         >
           <Icon name="envelope-closed" class="size-5" />
@@ -28,10 +29,7 @@ import Icon from '~/components/ui/Icon.astro'
         </a>
       </div>
       <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
-        <a
-          href="https://github.com/tinogasta-labs"
-          class="flex items-center gap-4 p-6"
-        >
+        <a href={config.social.github} class="flex items-center gap-4 p-6">
           <Icon name="github-logo" class="size-5" />
           <div class="flex-1">
             <h1>Contribute</h1>
