--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import BackToTop from '~/components/BackToTop.astro'
+import Footer from '~/components/Footer.astro'
+import Header from '~/components/Header.astro'
 import BaseHead from '~/components/shared/BaseHead.astro'
-import Header from '~/components/shared/Header.astro'
 import '~/styles/global.css'
 
 interface Props {
@@ -30,11 +31,7 @@ const { title, description, keywords, image } = Astro.props
       <main class="flex-1 px-6">
         <slot />
       </main>
-      <footer class="flex h-24 items-center px-6">
-        <p class="text-fg-muted w-full text-center">
-          This site is under construction.
-        </p>
-      </footer>
+      <Footer />
       <BackToTop />
     </div>
   </body>
