--- a/src/sections/FaqSection.astro
+++ b/src/sections/FaqSection.astro
@@ -37,7 +37,7 @@ const faqs = [
 
     <div>
       {
-        faqs.map(faq => (
+        faqs.map((faq, idx) => (
           <div class="border-fg/10 mb-4 border-b pb-4">
             <button
               aria-expanded="false"
@@ -49,7 +49,7 @@ const faqs = [
             </button>
             <div
               class="faq-answer max-h-0 transform overflow-hidden opacity-0 transition-all duration-300 ease-in-out"
-              id="answer-1"
+              id={`answer-${idx}`}
             >
               <p class="text-fg-muted pb-6">{faq.answer}</p>
             </div>
