--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,20 +16,20 @@ const social = [
 ---
 
 <footer
-  class="border-fg/10 mt-16 border-t px-6 py-12 md:mt-24 md:px-8 lg:px-16"
+  class="border-fg/10 mt-24 border-t px-6 py-12 sm:mt-32 md:mt-56 md:px-8 lg:px-16"
 >
   <Container>
     <div class="mb-12 grid gap-8 md:grid-cols-2">
       <div>
         <h1 class="mb-4 text-lg">Tinogasta Labs</h1>
-        <p class="text-fg-muted">
+        <p class="text-fg-muted text-lg font-light">
           Building secure, high-performance applications for the community.
         </p>
       </div>
 
       <div class="grid grid-cols-2 gap-8">
         <div>
-          <h2 class="mb-4 font-medium">Links</h2>
+          <h2 class="mb-4 text-sm font-medium">Links</h2>
           <ul class="space-y-2">
             {
               links.map(link => (
@@ -44,7 +44,7 @@ const social = [
         </div>
 
         <div>
-          <h2 class="mb-4 font-medium">Connect</h2>
+          <h2 class="mb-4 text-sm font-medium">Connect</h2>
           <div class="flex flex-col gap-2">
             {
               social.map(link => (
@@ -58,7 +58,9 @@ const social = [
       </div>
     </div>
 
-    <div class="border-fg/10 text-fg-muted border-t pt-8 text-center text-sm">
+    <div
+      class="border-fg/10 text-fg-muted border-t pt-8 text-center text-base font-light"
+    >
       Thoogasta Labs - {new Date().getFullYear()}
     </div>
   </Container>
