--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import BackToTop from '~/components/BackToTop.astro'
 import Footer from '~/components/Footer.astro'
 import Header from '~/components/Header.astro'
 import BaseHead from '~/components/shared/BaseHead.astro'
+import '@fontsource-variable/mona-sans'
+import monaFont from '@fontsource-variable/mona-sans/files/mona-sans-latin-wght-normal.woff2?url'
 import '~/styles/global.css'
 
 interface Props {
@@ -18,6 +20,13 @@ const { title, description, keywords, image } = Astro.props
 <!doctype html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href={monaFont}
+      crossorigin="anonymous"
+    />
     <BaseHead
       title={title}
       description={description}
