--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -4,13 +4,12 @@ import Icon from '~/components/ui/Icon.astro'
 import config from '~/site-config.json'
 ---
 
-<section class="py-16 md:py-24" id="contact">
+<section class="mt-24 sm:mt-32 md:mt-56" id="contact">
   <Container>
-    <header class="mb-16 flex flex-col gap-2">
+    <header class="mb-24 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">Get in touch</h1>
-      <p class="text-fg-muted sm:text-lg">
-        Have a question or interested in our services? Reach out to us or
-        contribute to our open source projects.
+      <p class="text-fg-muted text-xl font-light">
+        Reach out to us or contribute to our open source projects.
       </p>
     </header>
 
@@ -18,7 +17,7 @@ import config from '~/site-config.json'
       <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
         <a
           href={`mailto:${config.social.email}`}
-          class="flex items-center gap-4 p-6"
+          class="flex items-center gap-4 px-6 py-8"
         >
           <Icon name="envelope-closed" class="size-5" />
           <div class="flex-1">
