--- a/src/sections/FaqSection.astro
+++ b/src/sections/FaqSection.astro
@@ -26,11 +26,11 @@ const faqs = [
 ]
 ---
 
-<section class="py-16 md:py-24" id="faq">
+<section class="mt-24 sm:mt-32 md:mt-56" id="faq">
   <Container>
-    <header class="mb-16 flex flex-col gap-2">
+    <header class="mb-24 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">Frequently Asked Questions</h1>
-      <p class="text-fg-muted sm:text-lg">
+      <p class="text-fg-muted text-xl font-light">
         Find answers to common questions about our services and tools.
       </p>
     </header>
@@ -51,7 +51,9 @@ const faqs = [
               class="faq-answer max-h-0 transform overflow-hidden opacity-0 transition-all duration-300 ease-in-out"
               id={`answer-${idx}`}
             >
-              <p class="text-fg-muted pb-6">{faq.answer}</p>
+              <p class="text-fg-muted pb-6 text-lg leading-relaxed font-light">
+                {faq.answer}
+              </p>
             </div>
           </div>
         ))
