--- a/src/sections/HeroSection.astro
+++ b/src/sections/HeroSection.astro
@@ -3,15 +3,15 @@ import Container from '~/components/shared/Container.astro'
 import config from '~/site-config.json'
 ---
 
-<section class="py-16 md:pt-24">
+<section class="mt-24 sm:mt-32 md:mt-56">
   <Container>
-    <h1 class="text-4xl font-light sm:text-7xl">
+    <h1 class="text-4xl font-light tracking-tight sm:text-[64px]">
       We develop <span class="block">open source tools</span> that your clients loves.
     </h1>
-    <p class="text-fg-muted mt-4 font-light md:text-2xl">
+    <p class="text-fg-muted mt-6 text-xl font-light">
       Building secure, high-performance applications for the community.
     </p>
-    <div class="mt-6 flex items-center gap-4">
+    <div class="mt-12 flex items-center gap-4">
       <a
         href={`mailto:${config.social.email}`}
         class="border-primary bg-primary text-on-primary inline-flex h-12 cursor-pointer items-center rounded-full border px-6 text-sm"
