--- a/src/sections/ServicesSection.astro
+++ b/src/sections/ServicesSection.astro
@@ -25,11 +25,11 @@ const services = [
 ]
 ---
 
-<section class="py-16 md:py-24" id="services">
+<section class="mt-24 sm:mt-32 md:mt-56" id="services">
   <Container>
-    <header class="mb-16 flex flex-col gap-2">
+    <header class="mb-16 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">What We Do?</h1>
-      <p class="text-fg-muted sm:text-lg">
+      <p class="text-fg-muted text-xl font-light">
         We build digital solutions to empower businesses and local projects.
       </p>
     </header>
@@ -40,7 +40,9 @@ const services = [
           <li class="border-fg/10 border p-8 sm:p-12">
             <span class="bg-fg/10 block size-12 sm:size-16" />
             <h1 class="mt-4 mb-4 text-xl sm:text-2xl">{service.title}</h1>
-            <p class="text-fg-muted sm:text-lg">{service.description}</p>
+            <p class="text-fg-muted font-light sm:text-lg">
+              {service.description}
+            </p>
           </li>
         ))
       }
