add missing icons

--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -19,7 +19,7 @@ import config from '~/site-config.json'
           href={`mailto:${config.social.email}`}
           class="flex items-center gap-4 px-6 py-8"
         >
-          <Icon name="envelope-closed" class="size-5" />
+          <Icon name="envelope-closed" class="text-fg-muted/50 size-5" />
           <div class="flex-1">
             <h1>Email Us</h1>
             <p class="text-fg-muted">contact@tinogasta-labs.com</p>
@@ -29,7 +29,7 @@ import config from '~/site-config.json'
       </div>
       <div class="group hover:bg-fg/10 border-fg/10 border transition-all">
         <a href={config.social.github} class="flex items-center gap-4 p-6">
-          <Icon name="github-logo" class="size-5" />
+          <Icon name="github-logo" class="text-fg-muted/50 size-5" />
           <div class="flex-1">
             <h1>Contribute</h1>
             <p class="text-fg-muted">@tinogasta-labs</p>
