--- a/src/sections/ServicesSection.astro
+++ b/src/sections/ServicesSection.astro
@@ -1,28 +1,34 @@
 ---
+import type { IconName } from '@/icon-name'
 import Container from '~/components/shared/Container.astro'
+import Icon from '~/components/ui/Icon.astro'
 
 const services = [
   {
     title: 'Custom Development',
     description:
       'We build fast, accessible, and scalable web applications using open-source technologies and industry best practices.',
+    iconName: 'code',
   },
   {
     title: 'Developer Tools',
     description:
       'We create tools to streamline workflows, enhance the developer experience, and improve software quality.',
+    iconName: 'gear',
   },
   {
     title: 'Performance Optimization',
     description:
       'We optimize websites and applications for speed and efficiency with advanced techniques, monitoring, and best practices.',
+    iconName: 'rocket',
   },
   {
     title: 'Community Building',
     description:
       'We foster innovation by exploring new technologies and contributing to open-source projects that empower the developer community.',
+    iconName: 'stack',
   },
-]
+] satisfies Array<{ title: string; description: string; iconName: IconName }>
 ---
 
 <section class="mt-24 sm:mt-32 md:mt-56" id="services">
@@ -37,9 +43,14 @@ const services = [
     <ul class="grid gap-6 sm:grid-cols-2">
       {
         services.map(service => (
-          <li class="border-fg/10 border p-8 sm:p-12">
-            <span class="bg-fg/10 block size-12 sm:size-16" />
-            <h1 class="mt-4 mb-4 text-xl sm:text-2xl">{service.title}</h1>
+          <li class="border-fg/10 border p-8 md:p-12">
+            <Icon
+              name={service.iconName}
+              class="text-fg-muted/50 size-6 md:size-8"
+            />
+            <h1 class="mt-8 mb-4 text-xl sm:mt-12 sm:text-2xl">
+              {service.title}
+            </h1>
             <p class="text-fg-muted font-light sm:text-lg">
               {service.description}
             </p>
