--- a/src/sections/ServicesSection.astro
+++ b/src/sections/ServicesSection.astro
@@ -31,7 +31,11 @@ const services = [
 ] satisfies Array<{ title: string; description: string; iconName: IconName }>
 ---
 
-<section class="mt-24 sm:mt-32 md:mt-56" id="services">
+<section
+  class="animate-fade-up mt-24 opacity-0 sm:mt-32 md:mt-56"
+  id="services"
+  style={{ animationDelay: '0.3s', animationFillMode: 'forwards' }}
+>
   <Container>
     <header class="mb-16 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">What We Do?</h1>
