--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,22 @@
   --color-fg-muted: var(--fg-muted);
   --color-primary: var(--primary);
   --color-on-primary: var(--on-primary);
+
+  --animate-fade-up: fade-up 0.5s;
+
+  @keyframes fade-up {
+    0% {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    80% {
+      opacity: 0.6;
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0px);
+    }
+  }
 }
 
 :root {
