--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -4,7 +4,11 @@ import Icon from '~/components/ui/Icon.astro'
 import config from '~/site-config.json'
 ---
 
-<section class="mt-24 sm:mt-32 md:mt-56" id="contact">
+<section
+  class="animate-fade-up mt-24 opacity-0 sm:mt-32 md:mt-56"
+  id="contact"
+  style={{ animationDelay: '0.3s', animationFillMode: 'forwards' }}
+>
   <Container>
     <header class="mb-24 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">Get in touch</h1>
