--- a/src/sections/FaqSection.astro
+++ b/src/sections/FaqSection.astro
@@ -26,7 +26,11 @@ const faqs = [
 ]
 ---
 
-<section class="mt-24 sm:mt-32 md:mt-56" id="faq">
+<section
+  class="animate-fade-up mt-24 opacity-0 sm:mt-32 md:mt-56"
+  id="faq"
+  style={{ animationDelay: '0.3s', animationFillMode: 'forwards' }}
+>
   <Container>
     <header class="mb-24 flex flex-col gap-4">
       <h1 class="text-2xl sm:text-4xl">Frequently Asked Questions</h1>
