--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,17 @@
 ---
+import { defaultLang } from '~/i18n'
+import type { Language } from '~/i18n/types'
 import Layout from '~/layouts/Layout.astro'
 import ContactSection from '~/sections/ContactSection.astro'
 import FaqSection from '~/sections/FaqSection.astro'
 import HeroSection from '~/sections/HeroSection.astro'
 import ServicesSection from '~/sections/ServicesSection.astro'
+
+const lang = (Astro.currentLocale || defaultLang) as Language
 ---
 
 <Layout>
-  <HeroSection />
+  <HeroSection lang={lang} />
   <ServicesSection />
   <FaqSection />
   <ContactSection />
