--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,5 +1,6 @@
 ---
 import type { GetStaticPaths } from 'astro'
+import type { Language } from '~/i18n/types'
 import Layout from '~/layouts/Layout.astro'
 import ContactSection from '~/sections/ContactSection.astro'
 import FaqSection from '~/sections/FaqSection.astro'
@@ -7,12 +8,15 @@ import HeroSection from '~/sections/HeroSection.astro'
 import ServicesSection from '~/sections/ServicesSection.astro'
 
 export const getStaticPaths = (() => {
-  return [{ params: { lang: 'en' } }, { params: { lang: 'es' } }]
+  const langs: Language[] = ['en', 'es']
+  return langs.map(lang => ({ params: { lang } }))
 }) satisfies GetStaticPaths
+
+const { lang } = Astro.params
 ---
 
 <Layout>
-  <HeroSection />
+  <HeroSection lang={lang} />
   <ServicesSection />
   <FaqSection />
   <ContactSection />
