translate services section

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -17,7 +17,7 @@ const { lang } = Astro.params
 
 <Layout>
   <HeroSection lang={lang} />
-  <ServicesSection />
+  <ServicesSection lang={lang} />
   <FaqSection />
   <ContactSection />
 </Layout>
