--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ const lang = (Astro.currentLocale || defaultLang) as Language
 
 <Layout>
   <HeroSection lang={lang} />
-  <ServicesSection />
+  <ServicesSection lang={lang} />
   <FaqSection />
   <ContactSection />
 </Layout>
