translate faqs section

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -18,6 +18,6 @@ const { lang } = Astro.params
 <Layout>
   <HeroSection lang={lang} />
   <ServicesSection lang={lang} />
-  <FaqSection />
+  <FaqSection lang={lang} />
   <ContactSection />
 </Layout>
