--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,6 @@ const lang = (Astro.currentLocale || defaultLang) as Language
 <Layout>
   <HeroSection lang={lang} />
   <ServicesSection lang={lang} />
-  <FaqSection />
+  <FaqSection lang={lang} />
   <ContactSection />
 </Layout>
