translate contact section

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -19,5 +19,5 @@ const { lang } = Astro.params
   <HeroSection lang={lang} />
   <ServicesSection lang={lang} />
   <FaqSection lang={lang} />
-  <ContactSection />
+  <ContactSection lang={lang} />
 </Layout>
