--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,5 +14,5 @@ const lang = (Astro.currentLocale || defaultLang) as Language
   <HeroSection lang={lang} />
   <ServicesSection lang={lang} />
   <FaqSection lang={lang} />
-  <ContactSection />
+  <ContactSection lang={lang} />
 </Layout>
