--- a/src/sections/ContactSection.astro
+++ b/src/sections/ContactSection.astro
@@ -1,7 +1,17 @@
 ---
 import Container from '~/components/shared/Container.astro'
 import Icon from '~/components/ui/Icon.astro'
+import { getTranslations } from '~/i18n'
+import type { Language } from '~/i18n/types'
 import config from '~/site-config.json'
+
+export type Props = {
+  lang: Language
+}
+
+const { lang } = Astro.props
+
+const t = getTranslations(lang)
 ---
 
 <section
@@ -11,9 +21,9 @@ import config from '~/site-config.json'
 >
   <Container>
     <header class="mb-24 flex flex-col gap-4">
-      <h1 class="text-2xl sm:text-4xl">Get in touch</h1>
+      <h1 class="text-2xl sm:text-4xl">{t['contact.title']}</h1>
       <p class="text-fg-muted text-xl font-light">
-        Reach out to us or contribute to our open source projects.
+        {t['contact.subtitle']}
       </p>
     </header>
 
@@ -25,7 +35,7 @@ import config from '~/site-config.json'
         >
           <Icon name="envelope-closed" class="text-fg-muted/50 size-5" />
           <div class="flex-1">
-            <h1>Email Us</h1>
+            <h1>{t['contact.email']}</h1>
             <p class="text-fg-muted">contact@tinogasta-labs.com</p>
           </div>
           <Icon name="external-link" class="text-fg-muted size-4" />
@@ -35,7 +45,7 @@ import config from '~/site-config.json'
         <a href={config.social.github} class="flex items-center gap-4 p-6">
           <Icon name="github-logo" class="text-fg-muted/50 size-5" />
           <div class="flex-1">
-            <h1>Contribute</h1>
+            <h1>{t['contact.contribute']}</h1>
             <p class="text-fg-muted">@tinogasta-labs</p>
           </div>
           <Icon name="external-link" class="text-fg-muted size-4" />
